# aws_spike

./: CHANGELOG.md  Makefile  README.md  aws_apigateway.tf  generate_release_msg.py  get_version.py  lambda.tf  markdown_to_text.py  provider.tf  pyproject.toml  setup.py  terraform.tfstate  terraform.tfstate.backup  welcome.py
.github/workflows/: CD-production.yml  CD-stage.yml  CI-CD-stage.yml  CI-CD.yml  validate-PR-name.yml
iam/: lambda-policy.json
release_version_tools/: generate_release_msg.py  setup.py
semantic_release/: __init__.py
