[tool.poetry]
name = "ioet_desk_reservation"
version = "1.0.0"
description = "Backend to ioet desk reservation"
authors = []


[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
markdown = "^3.4.1"

[tool.semantic_release]
tag_format = "v{version}-stg"
branch = "main"
version_variable = "release_version_tools/setup.py:__version__"
upload_to_repository = false

